@@ -1,0 +1,11 @@
+; Podcast Manager for Joomla!
+; Copyright (C) 2011 Michael Babker. All rights reserved.
+; Note : All ini files need to be saved as UTF-8 - No BOM
+; Double quotes in the values have to be formatted as "_QQ_"
+
+MOD_PODCASTMANAGERFEED="Podcast Manger Feed Listing"
+MOD_PODCASTMANAGER_FIELD_COUNT_DESC="The number of podcast episodes to display (the default is 5)"
+MOD_PODCASTMANAGER_FIELD_COUNT_LABEL="Count"
+MOD_PODCASTMANAGERFEED_FIELD_FEEDNAME_DESCRIPTION="The feed to link this module to."
+MOD_PODCASTMANAGERFEED_FIELD_FEEDNAME_LABEL="Feed"
+MOD_PODCASTMANAGERFEED_XML_DESCRIPTION="The Podcast Manager Feed Listing module provides a list of the latest published podcast episodes in a specified feed."
