@@ -1,0 +1,80 @@
+<?xml version="1.0" encoding="utf-8"?>
+<extension type="module" version="1.7" client="site" method="upgrade">
+	<name>mod_podcastmanagerfeed</name>
+	<creationDate>June 2011</creationDate>
+	<author>Michael Babker</author>
+	<copyright>(C) 2011 Michael Babker</copyright>
+	<authorEmail>mbabker@flbab.com</authorEmail>
+	<authorUrl>http://www.flbab.com</authorUrl>
+	<version>1.8 Alpha</version>
+	<license>GNU/GPL Version 2 or later</license>
+	<description>MOD_PODCASTMANAGERFEED_XML_DESCRIPTION</description>
+	<files>
+		<folder>tmpl</folder>
+		<filename module="mod_podcastmanagerfeed">mod_podcastmanagerfeed.php</filename>
+		<filename>helper.php</filename>
+		<filename>index.html</filename>
+	</files>
+	<languages>
+		<language tag="en-GB">language/en-GB/en-GB.mod_podcastmanagerfeed.ini</language>
+		<language tag="en-GB">language/en-GB/en-GB.mod_podcastmanagerfeed.sys.ini</language>
+	</languages>
+	<config>
+		<fields>
+			<fieldset name="basic"
+				addfieldpath="/administrator/components/com_podcastmanager/models/fields" >
+				<field
+					name="feed"
+					type="feedname"
+					class="inputbox"
+					label="MOD_PODCASTMANAGERFEED_FIELD_FEEDNAME_LABEL" 
+					description="MOD_PODCASTMANAGERFEED_FIELD_FEEDNAME_DESCRIPTION" 
+					size="1" />
+				<field
+					name="count"
+					type="text"
+					default="5"
+					filter="integer"
+					label="MOD_PODCASTMANAGERFEED_FIELD_COUNT_LABEL"
+					description="MOD_PODCASTMANAGERFEED_FIELD_COUNT_DESCRIPTION" />
+			</fieldset>
+			<fieldset
+				name="advanced">
+				<field
+					name="layout"
+					type="modulelayout"
+					label="JFIELD_ALT_LAYOUT_LABEL"
+					description="JFIELD_ALT_MODULE_LAYOUT_DESC" />
+				<field
+					name="moduleclass_sfx"
+					type="text"
+					label="COM_MODULES_FIELD_MODULECLASS_SFX_LABEL"
+					description="COM_MODULES_FIELD_MODULECLASS_SFX_DESC" />
+				<field
+					name="cache"
+					type="list"
+					default="1"
+					label="COM_MODULES_FIELD_CACHING_LABEL"
+					description="COM_MODULES_FIELD_CACHING_DESC">
+					<option
+						value="1">JGLOBAL_USE_GLOBAL</option>
+					<option
+						value="0">COM_MODULES_FIELD_VALUE_NOCACHING</option>
+				</field>
+				<field
+					name="cache_time"
+					type="text"
+					default="900"
+					label="COM_MODULES_FIELD_CACHE_TIME_LABEL"
+					description="COM_MODULES_FIELD_CACHE_TIME_DESC" />
+				<field
+					name="cachemode"
+					type="hidden"
+					default="static">
+					<option
+						value="static"></option>
+				</field>
+			</fieldset>
+		</fields>
+	</config>
+</extension>
