@@ -1,3 +1,6 @@
+29-June-2011 Michael Babker Version 1.8 Changes
++ Add a feed listing module
+
 29-June-2011 Michael Babker Version 1.7 Changes
 # Modified podcast summary field to allow up to 5120 characters
 
